🚨 prettier and eslint fixes
